[tool.poetry]
name = "sadhu"
version = "0.1.0"
description = ""
authors = ["Thanathip Limna <boatkrap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
Authlib = "^1.0.1"
Flask-Login = "^0.6.3"
Markdown = "^3.4.1"
Pygments = "^2.13.0"
python-markdown-math = "^0.8"
wheel = "^0.37.1"
brython = "^3.10.6"
flask-me = "^1.0.2"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[tool.poetry.group.dev.dependencies]
watchdog = "^2.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
sadhu-web = 'sadhu.cmd.web:main'
sadhu-checker = 'sadhu.cmd.checker:main'

